--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -633,7 +633,7 @@ In the past few years, several companies have released products that use multi-t
     </string-array>
 
     <string-array name="fingerprint_descriptions">
-        <item>A fingerprint in its narrow sense is an impression left by the friction ridges of a human finger.[1] The recovery of fingerprints from a crime scene is an important method of forensic science.\n\n
+        <item>A fingerprint in its narrow sense is an impression left by the friction ridges of a human finger. The recovery of fingerprints from a crime scene is an important method of forensic science.\n\n
 
             Fingerprints are easily deposited on suitable surfaces (such as glass or metal or polished stone) by the natural secretions of sweat from the eccrine glands that are present in epidermal ridges. These are sometimes referred to as \"Chanced Impressions\".\n\n
 
